--- a/GRSS.Web/GRSS.Web.csproj
+++ b/GRSS.Web/GRSS.Web.csproj
@@ -239,26 +239,27 @@
   <ItemGroup>
     <Content Include="App\app.js" />
     <None Include="App\index.cshtml" />
+    <Content Include="App\components\home\homeCtrl.js" />
     <Content Include="App\constants.js" />
-    <Content Include="App\controllers\companyCtrl.js" />
-    <Content Include="App\controllers\dashboardCtrl.js" />
-    <Content Include="App\controllers\sideBarCtrl.js" />
-    <Content Include="App\controllers\supplierEditCtrl.js" />
-    <Content Include="App\controllers\surveysCtrl.js" />
-    <Content Include="App\directives\imageUpload.js" />
+    <Content Include="App\shared\layout\companyCtrl.js" />
+    <Content Include="App\components\dashboard\dashboardCtrl.js" />
+    <Content Include="App\shared\sidebar\sideBarCtrl.js" />
+    <Content Include="App\components\supplier\supplierEditCtrl.js" />
+    <Content Include="App\components\surveys\surveysCtrl.js" />
+    <Content Include="App\shared\directives\imageUpload.js" />
     <Content Include="App\routeConfig.js" />
-    <Content Include="App\views\company.dashboard.cshtml" />
-    <Content Include="App\views\company.surveys.cshtml" />
-    <Content Include="App\views\company.cshtml" />
-    <Content Include="App\views\404.cshtml" />
-    <Content Include="App\views\company.supplier.edit.cshtml" />
-    <Content Include="App\views\image-upload.cshtml" />
-    <None Include="App\views\register.cshtml" />
-    <Content Include="App\controllers\loginCtrl.js" />
-    <Content Include="App\controllers\navBarCtrl.js" />
-    <Content Include="App\controllers\registerCtrl.js" />
-    <Content Include="App\services\user.js" />
-    <Content Include="App\services\userAccount.js" />
+    <Content Include="App\components\dashboard\company.dashboard.cshtml" />
+    <Content Include="App\components\surveys\company.surveys.cshtml" />
+    <Content Include="App\shared\layout\company.cshtml" />
+    <Content Include="App\shared\special\404.cshtml" />
+    <Content Include="App\components\supplier\company.supplier.edit.cshtml" />
+    <Content Include="App\shared\templates\image-upload.cshtml" />
+    <None Include="App\components\register\register.cshtml" />
+    <Content Include="App\components\login\loginCtrl.js" />
+    <Content Include="App\shared\layout\navBarCtrl.js" />
+    <Content Include="App\components\register\registerCtrl.js" />
+    <Content Include="App\shared\services\user.js" />
+    <Content Include="App\shared\services\userAccount.js" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Areas\HelpPage\Views\_ViewStart.cshtml" />
     <Content Include="Content\angular-loading-bar.css" />
@@ -308,12 +309,12 @@
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
     <Content Include="Scripts\angular.min.js.map" />
     <Content Include="Scripts\angular-resource.min.js.map" />
-    <Content Include="App\views\home.cshtml" />
-    <Content Include="App\views\login.cshtml" />
+    <Content Include="App\components\home\home.cshtml" />
+    <Content Include="App\components\login\login.cshtml" />
     <Content Include="App\Web.config">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="App\views\templates\navbar.cshtml" />
+    <Content Include="App\shared\layout\navbar.cshtml" />
     <Content Include="Scripts\angular-animate.min.js.map" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -361,7 +362,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App\directives\" />
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
