--- a/GRSS.Web/packages.config
+++ b/GRSS.Web/packages.config
@@ -1,13 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="angular-toastr" version="1.4.1" targetFramework="net452" />
   <package id="Angular.UI.Bootstrap" version="0.13.3" targetFramework="net452" />
   <package id="Angular.UI.UI-Router" version="0.2.15" targetFramework="net452" />
   <package id="AngularJS.Animate" version="1.4.3" targetFramework="net452" />
   <package id="AngularJS.Core" version="1.4.3" targetFramework="net452" />
   <package id="AngularJS.Resource" version="1.4.3" targetFramework="net452" />
-  <package id="angular-toastr" version="1.4.1" targetFramework="net452" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="Breeze.Angular" version="1.1.1" targetFramework="net452" />
+  <package id="Breeze.Angular.Directives" version="1.3.10" targetFramework="net452" />
+  <package id="Breeze.Client" version="1.5.4" targetFramework="net452" />
+  <package id="Breeze.Server.ContextProvider" version="1.5.4" targetFramework="net452" />
+  <package id="Breeze.Server.ContextProvider.EF6" version="1.5.4" targetFramework="net452" />
+  <package id="Breeze.Server.WebApi2" version="1.5.4" targetFramework="net452" />
+  <package id="Breeze.WebApi2.EF6" version="1.5.4" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="Knockout.Validation" version="1.0.1" targetFramework="net452" />
@@ -23,10 +30,13 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.2.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net452" />
+  <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Cors" version="3.0.1" targetFramework="net452" />
@@ -42,7 +52,10 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="Q" version="0.8.12" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="Sammy.js" version="0.7.4" targetFramework="net452" />
+  <package id="System.Spatial" version="5.6.0" targetFramework="net452" />
+  <package id="WebActivator" version="1.0.0.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
